--- a/Waitstaff_Calculator/css/style.css
+++ b/Waitstaff_Calculator/css/style.css
@@ -1,61 +1,12 @@
-body {
-	width: 1000px;
-	margin: 0 auto;
-	border: 4px solid #000;
-}
-header {
-	height: 205px;
-	text-align: center;
-	border-bottom: 4px solid #000;
-}
-header > div {
-	float: left;
-}
-
 h1 {
-	font-size: 64px;
-	margin-top: 4px;
-}
-
-.logo-box {
-	width: 250px;
-	border: 3px solid #000;
-}
-.header-title-box {
-	width: 740px;
-}
-
-.wordlist-section {
-	padding: 40px;
-	border-bottom: 4px solid #000;
-}
-.wordlist-section h2 {
 	text-align: center;
-	font-size: 48px;
-	
-	margin: 0;
 }
 
-.sentence-section {
-	padding: 40px;
+section {
+	border: 2px solid #000;
+	padding: 20px;
 }
 
-p {
-	font-size: 24px;
-}
-
-.input-box {
-	margin-bottom: 10px;
-}
-
-.input-box input {
-	width: 226px;
-	margin: 30px;
-}
-.inputResult {
-	text-decoration: underline;
-}
-
-.float-right {
-	float: right;
+.span-pos-fix > div {
+	padding-top: 8px;
 }
